tests/golden/err-multi-pub/expected_error.txt
error: `:pub` は1ファイルに1つまでです
 --> main.clum:4:1
  |
4 | b: Html = h .span
  | ^ 最初の公開定義は2行目です
